# django-experiments

./: .dockerignore  .env.default  .env.docker  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py  api.py  asgi.py  celery.py  debug_toolbar_middleware.py  gunicorn_configs.py  redis.py  settings.py  urls.py  utils.py  wsgi.py
experiments/: models.py  utils.py
experiments/management/commands/: generate_rows.py  run_filter_experiments.py
experiments/migrations/: 0001_initial.py  0002_experiment20m_experiment5m.py  0003_rename_experiment10m.py  0004_experiment50m.py
experiments/tests/: test_models.py
plot/: graph.py  plot_results.py
