[project]
name = "experiments"
version = "0.0.0" # See current_version below
requires-python = "==3.13.*"
readme = "README.md"
dependencies = [
    "celery==5.5.1",
    "django==5.2",
    "django-celery-beat==2.8.0",
    "django-debug-toolbar==5.0.1",
    "faker==37.1.0",
    "gunicorn==23.0.0",
    "psycopg[binary,pool]==3.2.6",
    "redis[hiredis]==5.2.1",
]

[dependency-groups]
dev = [
    "fakeredis==2.28.1",
    "mypy==1.15.0",
    "pytest-django==4.11.1",
    "ruff==0.11.7",
]

[tool.uv]
package = false

# https://callowayproject.github.io/bump-my-version/
[tool.bumpversion]
allow_dirty = false
commit = true
message = "Release {new_version}"

# Update version and date in project source code
[[tool.bumpversion.files]]
filename = "config/__init__.py"
regex = true
search = """__version__ = \"[^"]*\"\n__date__ = \"[^"]*\""""
replace = """__version__ = \"{new_version}\"\n__date__ = \"{now:%Y-%m-%d}\""""

# Ruff: code formatter + linter
[tool.ruff]
line-length = 120

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "C", "Q", "B", "A", "PL", "I"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

# mypy
[tool.mypy]
ignore_missing_imports = true

# pytest
[tool.pytest.ini_options]
addopts = ["--ds=config.settings", "-vv"]
